--- a/www/style.css
+++ b/www/style.css
@@ -1,59 +1,318 @@
+/* HEADERS */
 
-/* style headers */
 h1 {
-  font-size: 34px;
-}
-.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-  color: #005EB8;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-  font-weight: 700;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
+font-size: 34px!important;
 }
 
-/* style main container */
+.title {
+font-size: 38px!important;
+}
+
+h2 {
+font-size: 30px!important;
+color: #005EB8!important;
+}
+
+h3 {
+font-size: 24px!important;
+}
+
+h4 {
+font-size: 18px!important;
+font-weight: bold!important;
+}
+
+h5 {
+font-size: 16px!important;
+font-weight: bold!important;
+}
+
+h6 {
+font-size: 16px!important;
+font-weight: bold!important;
+}
+
+/* MAIN BODY */  
+
 .main-container {
-  max-width: 940px;
-  margin-left: auto;
-  margin-right: auto;
+max-width: 940px;
+margin-left: auto;
+margin-right: auto;
 }
+
 code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
+color: inherit;
+background-color: rgba(0, 0, 0, 0.04);
 }
-img {
-  max-width:100%;
-}
-.tabbed-pane {
-  padding-top: 12px;
-}
-.html-widget {
-  margin-bottom: 20px;
-}
-.code-folding-btn:focus {
-  outline: none;
-}
+
+body, td { 
+font-size: 16px; 
+font-family: sans-serif; 
+} 
+
 summary {
-  display: list-item;
+display: list-item;
+}
+
+a { 
+color: #005EB8!important; 
+} 
+
+* {
+font-family: Arial;
+}
+
+.quartoheader {
+position: fixed;
+width: 100%;
+top:0;
+left:0;
+-webkit-font-smoothing: antialiased;
+margin: 0 auto;
+padding: 0;
+z-index: 2000;
+}
+
+p {
+font-size: 16px!important;
+}
+
+.html-widget {
+margin-bottom: 20px;
+width: 100%!important;
+}
+
+.nhsuk-list, ol, ul {
+font-size: 16px!important;
+}
+
+/* TABS */
+
+.tabbed-pane {
+padding-top: 12px;
+}
+
+.nav-tabs>li>a {
+color: black!important;
+border-radius: 0px!important;
+font-size: 16px;
+}
+
+.nav-tabs > li:not(.active) {
+text-decoration: underline;
+background-color: #d8dde0!important;
+}
+
+.nav-tabs > li.active {
+text-decoration: none;
+}
+
+.nav-tabs > li:not(.active)> a:hover,
+.nav-tabs > li:not(.active)> a:focus {
+background-color: transparent!important;
+border: none!important;
+box-shadow: none!important;
+padding-bottom: 10px!important;
+padding-left: 15px!important;
+padding-right: 15px!important;
+padding-top:10px!important;
+position: relative!important;
+margin-bottom: 0px!important;
+}
+
+.nav-tabs > li:not(.active):hover {
+text-decoration: none!important;
+}
+
+.tabbed-pane {
+padding-top: 24px!important;
+}
+
+.nav-tabs {
+border-bottom: 0px;
+}
+
+.tab-content {
+border: 1px solid #d8dde0;
+background-color: white;
+margin-bottom: 24px;
+}
+
+.nav-tabs>li.active>a {
+padding-bottom: 13px!important;
+margin-bottom: -1px;
+}
+
+.tab-content .tab-pane {
+padding: 10px;
+}
+
+/* IMAGES */
+
+img {
+max-width:100%;
 }
 
 #nav_logo {
-  width: 50%;
-  margin-top: 20px;
+width: 50%;
+margin-top: 20px;
 }
 
+/* BUTTON */
 
+.code-folding-btn:focus {
+outline: none;
+}
 
+.nhs-button-style {
+background-color: #007f3b!important;
+color: #fff!important;
+font-size: 16px!important;
+font-family: Arial!important;
+border: 2px solid rgba(0,0,0,0)!important;
+border-radius: 4px!important;
+cursor: pointer!important;
+display: inline-block!important;
+font-weight: 600!important;
+margin-top:0!important:
+padding: 12px 16px!important;
+box-shadow: 0 4px 0 #00401e!important;
+}
+
+.nhs-button-style:focus {
+background-color: #ffeb3b!important;
+color: #212b32!important;
+box-shadow: 0 4px 0 #212b32!important;
+outline: 4px solid rgba(0,0,0,0)!important;
+}
+
+div.dt-buttons {
+float: right!important;
+}
+
+/* TOC */
+
+.list-group-item.active { 
+background-color: #005EB8!important; 
+border-color: #005EB8!important; 
+} 
+
+.tocify { 
+border-radius: 0px!important; 
+}
+
+.tocify-subheader .list-group-item {
+text-indent: 0px!important;
+margin-left: 20px!important;
+}
+
+.title, .tocify {
+margin-top:140px;
+}
+
+.tocify {
+margin-top:140px!important;
+background-color: white!important;
+} 
+
+.tocify-subheader {
+font-size:14px!important;
+}
+
+.tocify-header {
+font-size:16px!important;
+text-indent: 0px!important;
+}
+
+li[role="presentation"] {
+margin-right: 4px;
+}
+
+/* TABLES */
+
+td[align="right"], th[align="right"] {
+text-align: right!important;
+font-size:16px!important;
+}
+
+td[align="left"], th[align="left"] {
+text-align: left!important;
+font-size:16px!important;
+}
+
+/* BACK TO TOP BUTTON */
+#backtop-button {
+    display: block;
+    visibility: hidden!important;
+    position: fixed;
+    z-index: 10000;
+    bottom: 20px;
+    right: 20px;
+    font-size: 10px;
+    padding: 0 10px 10px 10px;
+    border-radius: 5px;
+    color: white;
+    pointer-events: none;
+    transition: opacity 1s;
+    height: 50px!important;
+}
+
+button {
+    appearance: auto;
+    font-style: ;
+    font-variant-ligatures: ;
+    font-variant-caps: ;
+    font-variant-numeric: ;
+    font-variant-east-asian: ;
+    font-variant-alternates: ;
+    font-variant-position: ;
+    font-weight: ;
+    font-stretch: ;
+    font-size: ;
+    font-family: ;
+    font-optical-sizing: ;
+    font-kerning: ;
+    font-feature-settings: ;
+    font-variation-settings: ;
+    text-rendering: auto;
+    color: buttontext;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor: default;
+    box-sizing: border-box;
+    background-color: buttonface;
+    margin: 0em;
+    padding-block: 1px;
+    padding-inline: 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
+}
+
+input[type=submit], input[type=reset], input[type=button], button, .button, .submit {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    border: 0;
+    border-radius: 0;
+    padding: 8px 30px;
+    background: #005EB8;
+    font-size: 18px;
+    color: #e8edee;
+    transition: all 0.2s ease-in-out;
+    line-height: 1;
+}
+
+#backtop-button span {
+    display: block;
+    font-size: 30px;
+}
